Ajout du slider et de son ajustement pour le responsive

--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -328,4 +328,15 @@ header nav  li  a {
         display:none;
     }
 }
-/*-----------------------------------------Design du Footer----------------------------------------------------------------------------------------*
+/*----------------------------------------------------Design du Footer----------------------------------------------------------------------------------------*/
+footer nav {
+    width: 100%;
+
+    background-color: #cda100;
+}
+/*on met les elements du menu en display inline-block*/
+footer nav  li {
+    display: block;
+  padding-bottom: 5px;
+
+}
