--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -2,7 +2,8 @@
 /*On defini une largeur maximum pour le menu nav et on le centre*/
 header nav {
     width: 100%;
-    height: 40px;
+    height: 50px;
+    margin-top: 80px;
     text-align: center;
     background-color: rgba(221, 210, 177,0.8);
     background: -moz-linear-gradient(left, rgba(221,210,177,0) 0%, rgba(221,210,177,1) 20%, rgba(221,210,177,1) 80%, rgba(221,210,177,0) 100%); /* FF3.6-15 */
@@ -18,13 +19,28 @@ header nav {
 header nav  li {
     display: inline-block;
     float: none;
-}
-/*on espace les elements du menu*/
-header nav  li  a {
-    padding-left: 30px;
-    padding-right: 30px;
+
 }
 
+/*on espace les elements du menu*/
+header nav  li  a {
+    padding-left: 150px;
+    padding-right: 150px;
+
+}
+
+main{
+    padding-top: 40px;
+}
+/*----positionnement du logo dans menu-----*/
+header>a{
+    position: absolute;
+    left: 700px;
+    top: 30px;
+    z-index: 1;
+}
+
+header>nav>
 
 
 /*--------------------------------------------------------------------------Style du slider--------------------------------------------------------------------*/
@@ -352,7 +368,7 @@ header nav  li  a {
 
 footer nav {
     width: 100%;
-    height: 60px;
+    height: 80px;
     text-align: center;
     background-color: rgba(221, 210, 177,0.8);
     background: -moz-linear-gradient(left, rgba(221,210,177,0) 0%, rgba(221,210,177,1) 20%, rgba(221,210,177,1) 80%, rgba(221,210,177,0) 100%); /* FF3.6-15 */
