--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -49,13 +49,14 @@ header>nav>ul>li{
 #bckg-index{
     background: url("../Image/background-index.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 
 
 
 }
 #Accueil-slider {
     width:100%;
-    background:#333;
+
     padding: 30px 0;
 
     margin:0 auto;
@@ -430,7 +431,7 @@ html {
     padding: 2.5em 0;
 }
 
-main {
+#Events main {
     margin: 0 auto;
     width: 90%;
     max-width: 1200px;
@@ -553,7 +554,9 @@ main {
     height:auto;
     width: 100%;
 }
-
+#Events footer {
+    margin-top: 45%;
+}
 /*------------------------------------------style gallerie luchador--------------------------------------------------------*/
 #bck_lutteurs{
     background: url("../Image/background-lutteurs.jpg");
