--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'ABeeZee', sans-serif;
+}
+
 /*----------------------------------------------------DESIGN Du Header--------------------------------------------------------------------------------------*/
 /*On defini une largeur maximum pour le menu nav et on le centre*/
 header nav {
@@ -51,6 +55,7 @@ header>nav>ul>li{
 #bckg-index{
     background: url("../Image/background-index.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 
 
 
@@ -66,7 +71,7 @@ header>nav>ul>li{
 }
 
 #Accueil-slider.fullscreen {
-    background:black;
+   background:black;
 }
 
 #Accueil-slider .fs-icon {
@@ -225,7 +230,7 @@ header>nav>ul>li{
 /* ---------fleche buttons ------- */
 #Accueil-slider-pause-play { display:none;}
 
-#Accueil-slider-prev, #Accueil-slider-next
+    #Accueil-slider-prev, #Accueil-slider-next
 {
     position: absolute;
     display:inline-block;
@@ -256,7 +261,7 @@ header>nav>ul>li{
     transform:scale(1,1.3);
     /*border:1px solid white;*/
 }
-#Accueil-slider-prev:hover, #Accueil-slider-next:hover {
+    #Accueil-slider-prev:hover, #Accueil-slider-next:hover {
     opacity:1;
 
 }
@@ -385,7 +390,7 @@ footer nav {
 /*on met les elements du menu en display inline-block*/
 footer nav  li {
     display: inline-block;
-    padding-bottom: 5px;
+  padding-bottom: 5px;
 
 
 }
@@ -708,9 +713,9 @@ figure>img:hover {
 
 @keyframes shake {
     0% {
-        transform: rotate(0.5deg);
+         transform: rotate(0.5deg);
 
-    }
+     }
     12.5% {
         transform: rotate(-0.5deg);
 
@@ -747,18 +752,24 @@ figure>img:hover {
 /**********************PAGE CONTACT*************************/
 /***********************************************************/
 
+/*----------------Définition globale de la page------------*/
 #contacts{
     background-image: url("../Image/background-contact.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+/*-----------------------SECTION--------------------*/
 #contacts section{
     width: 85%;
     display: inline-block;
-    background-color: rgba(255,255,255,0.85);
+    background-color: rgba(255,255,255,0.90);
     border-radius: 4px;
     margin-bottom: 20px;
+}
+
+#contacts h2{
+    text-align: center;
 }
 
 #contacts ul, input{
@@ -768,6 +779,29 @@ figure>img:hover {
 #contacts fieldset{
     width: 90%;
     margin: 0 auto 20px auto;
+}
+
+#contacts span{
+    color: #ee3826;
+}
+
+#contacts ul{
+    text-align: center;
+}
+
+#contacts ul, input{
+    list-style: none;
+    padding: 0;
+}
+
+#contacts input{
+    display: inline-block;
+    padding: 2px;
+}
+
+#contacts ul label{
+    display: inline-block;
+    text-align: left;
 }
 
 #contacts fieldset legend{
@@ -786,6 +820,85 @@ figure>img:hover {
     display: inline-block;
 }
 
+
+/*--------------FIELDSET 1-----------*/
+#contacts fieldset:nth-of-type(1) ul{
+    padding: 0;
+    margin: 15px auto;
+    width: 75%;
+}
+
+#contacts fieldset:nth-of-type(1) label{
+    padding: 0;
+    margin: 2px auto;
+    width: 100px;
+}
+
+#contacts fieldset:nth-of-type(1) input{
+    padding: 2px;
+    margin: 2px auto;
+    width: 50%;
+}
+
+/*--------------FIELDSET 2-----------*/
+#contacts fieldset:nth-of-type(2) input:nth-of-type(2){
+    margin-left: 35px;
+}
+
+/*--------------FIELDSET 3-----------*/
+#contacts fieldset:nth-of-type(3) figure{
+    width: calc(90% / 7);
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    margin: 8px 10px;
+}
+
+#contacts fieldset:nth-of-type(3) li{
+    margin-bottom: 20px;
+}
+
+#contacts fieldset:nth-of-type(3) img{
+    width: 60%;
+}
+
+#contacts fieldset:nth-of-type(3) figcaption{
+    text-align: center;
+}
+
+#contacts fieldset:nth-of-type(3) label{
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0 auto;
+}
+
+#contacts fieldset:nth-of-type(3) input{
+    display: block;
+    margin:0 auto;
+}
+
+#contacts fieldset:nth-of-type(3) textarea{
+    display: block;
+    margin: 0 auto;
+}
+
+#contacts fieldset:nth-of-type(3) + ul input{
+    border: none;
+    background-color: #ee3826;
+    border-radius: 4px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+#contacts fieldset:nth-of-type(3) + ul input:hover{
+    background-color: #17bcb6;
+    border-radius: 4px;
+    padding: 10px;
+}
+
+
+
+/*-----------------------ASIDE--------------------*/
 #contacts aside{
     display: inline-block;
     vertical-align: top;
