--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -351,7 +351,7 @@ header>nav>ul>li{
 }
 
 
-/*------ Responsive settings du slider  ------*/
+/*------ Responsive settings du slider  -----------------------------*/
 @media only screen and (max-width:950px){
 
     #Accueil-slider-prev {
