--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -693,6 +693,22 @@ html {
     color: #c9c9c9;
     text-shadow:  20px 7px 0px rgba(180, 58, 58, 0.82);
 
+
+}
+
+#luch-info{
+    margin-left: 85%;
+    width: 900px;
+    height: 500px;
+    display: inline-block;
+
+}
+#luch-info>section>article{
+    display: inline-block;
+    position: absolute;
+    left:850px;
+    top:300px;
+
 }
 
 #details>section>figure{
