--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -420,6 +420,7 @@ footer nav  li {
     padding-bottom: 5px;
 
 
+
 }
 
 
@@ -427,6 +428,7 @@ footer nav  li {
 footer nav  li  a {
     padding-left: 30px;
     padding-right: 30px;
+    font-family: "bangers";
 }
 
 footer>nav>ul{
@@ -614,7 +616,7 @@ html {
 }
 
 #luchador{
-    font-family: bangers;
+    font-family: "bangers";
 
 
 }
@@ -624,10 +626,12 @@ html {
     background: -webkit-linear-gradient(#eee, #333);
     font-size: 40px;
     width:32%;
+    font-family: "bangers";
 }
 
 #luchador>ul{
     list-style-type: none;
+    font-family: "bangers";
 }
 
 #luchador>ul>li{
@@ -638,6 +642,7 @@ html {
     margin:40px;
     position: relative;
     right: 800px;
+    font-family: "bangers";
 
 }
 
@@ -664,6 +669,7 @@ html {
     width: 300px;
     margin-left: 400px;
     font-size: 50px;
+    font-family: "bangers";
 
 
 }
@@ -672,6 +678,7 @@ html {
 
 #luchador>ul>li>a{
     margin-left: 400px;
+    font-family: "bangers";
 
 
 }
@@ -680,9 +687,10 @@ html {
     display: inline-block;
     vertical-align: top;
     width: 10%;
-    margin: -95% 0 0 1000px;
+    margin: -95% 0 -20% 1000px;
     font-size: 130px;
     transform: rotate(90deg);
+    font-family: "bangers";
 
 
 }
@@ -712,52 +720,66 @@ html {
 #details{
     width:620px;
     display: inline-block;
-    font-family: "bangers";
-    color: #c9c9c9;
-    text-shadow:  20px 7px 0px rgba(180, 58, 58, 0.82);
+    color: black;
+    text-shadow:  10px 7px 0px rgba(180, 58, 58, 0.82);
 
 
 }
 
 #luch-info{
-    margin-left: 85%;
+    margin-left: 60%;
     width: 900px;
     height: 500px;
     display: inline-block;
+
+
 
 }
 #luch-info>section>article{
     display: inline-block;
     position: absolute;
-    left:850px;
+    left:700px;
     top:300px;
+
 
 }
 
 #details>section>figure{
     width:200px;
     display: inline-block;
+
 }
 
-#details>section>article{
+
+#luch-info>section>article{
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
     float: right;
-    display: inline-block;
-    margin-top: 50px;
+
+
+
+
+
 }
+#luch-info>section>article>p{
+    font-family: bangers;
+
+}
+
+
 
 #details figcaption{
 
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
+    font-family: "bangers";
 
 
 
 }
 #details figure>img{
     border-radius: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 #details figure>img:hover {
     animation-name: shake;
