--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -71,6 +71,91 @@ header nav li {
     font-size: 20px;
 }
 
+
+
+/*-------------------------------FOOTER--------------------------------------*/
+
+footer nav {
+    text-align: center;
+    position: relative;
+    padding: 15px;
+    height: 95px;
+    background-color: rgba(221, 210, 177,0.8);
+    background: -moz-linear-gradient(left, rgba(221,210,177,0) 0%, rgba(221,210,177,1) 20%, rgba(221,210,177,1) 80%, rgba(221,210,177,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(221,210,177,0) 0%,rgba(221,210,177,1) 20%,rgba(221,210,177,1) 80%,rgba(221,210,177,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(221,210,177,0) 0%,rgba(221,210,177,1) 20%,rgba(221,210,177,1) 80%,rgba(221,210,177,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ddd2b1', endColorstr='#00ddd2b1',GradientType=1 ); /* IE6-9 */
+}
+
+footer > nav > ul:nth-of-type(1){
+    width: 200px;
+    font-size: 12px;
+    bottom:0;
+    margin: 0 10% 0 10% ;
+    padding: 0;
+    border-right: 1px solid #ee3826;
+    display: inline-block;
+    vertical-align: top;
+}
+
+footer nav li {
+    padding-bottom: 5px;
+    list-style-type: none;
+    text-align: left;
+}
+
+/*on espace les elements du menu bas de page*/
+footer nav li a {
+    padding-left: 30px;
+    padding-right: 30px;
+    color: #ee3826;
+    text-decoration: none;
+    font-family: "bangers";
+}
+
+footer nav li a:hover {
+    padding-left: 30px;
+    padding-right: 30px;
+    color: #17bcb6;
+    text-decoration: none;
+}
+
+footer nav > div {
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: #ee3826;
+    text-decoration: none;
+    display: inline-block;
+}
+
+footer nav > div p{
+    font-family: "bangers";
+
+}
+
+footer > nav > ul:nth-of-type(2){
+    width: 150px;
+    bottom:0;
+    margin: 0 10% 0 10% ;
+    padding: 0;
+    border-left: 1px solid #ee3826;
+    display: inline-block;
+    vertical-align: top;
+}
+
+footer > nav > ul:nth-of-type(2) a > img{
+    width:40px;
+}
+
+footer > nav > ul:nth-of-type(2) li{
+    display: inline-block;
+    width: 60px;
+}
+
+
 main{
     padding-top: 40px;
 }
@@ -135,7 +220,7 @@ main{
 #Accueil-slider .slider-inner {
     max-width:800px;
     margin:0 auto;/*center-aligned */
-    font-size:0px;
+    font-size:0;
     position:relative;
     box-sizing:border-box;
 }
@@ -398,64 +483,10 @@ main{
         display:none;
     }
 }
-/*----------------------------------------------------Design du Footer----------------------------------------------------------------------------------------*/
-
-/*------------lien de page du footer--------*/
-
-footer nav {
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    background-color: rgba(221, 210, 177,0.8);
-    background: -moz-linear-gradient(left, rgba(221,210,177,0) 0%, rgba(221,210,177,1) 20%, rgba(221,210,177,1) 80%, rgba(221,210,177,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(221,210,177,0) 0%,rgba(221,210,177,1) 20%,rgba(221,210,177,1) 80%,rgba(221,210,177,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(221,210,177,0) 0%,rgba(221,210,177,1) 20%,rgba(221,210,177,1) 80%,rgba(221,210,177,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ddd2b1', endColorstr='#00ddd2b1',GradientType=1 ); /* IE6-9 */
-
-}
-
-/*on met les elements du menu en display inline-block*/
-footer nav  li {
-    display: inline-block;
-    padding-bottom: 5px;
 
 
-}
-
-
-/*on espace les elements du menu bas de page*/
-footer nav  li  a {
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-footer>nav>ul{
-    width: 600px;
-    float: left;
-    font-family: bangers;
-    font-size: 20px;
-}
-footer>nav{
-    display: inline-block;
-    text-align: center;
-}
-
-#social>li>a>img{
-    width:40px;
-
-}
-#social>li>{
-
-    float: right;
-
-}
-/*-----------------reseau sociaux du footer---------------------*/
 /*--------------------------------------------------------style de la page Events----------------------------------------------------------------------------*/
 
-html {
-    box-sizing: border-box;
-    height: 100%;
-}
 
 #Events *, *:before, *:after {
     box-sizing: inherit;
@@ -593,9 +624,7 @@ html {
     padding-bottom: 25px;
 }
 
-
 #Events table img{
-
     height:auto;
     width: 100%;
 }
@@ -615,8 +644,6 @@ html {
 
 #luchador{
     font-family: bangers;
-
-
 }
 
 #luchador>h1{
@@ -646,9 +673,6 @@ html {
     animation-duration: 10s ;
     animation-delay: 0s;
     animation-iteration-count: 1;
-
-
-
 }
 
 #luchador>ul>li>img{
@@ -656,25 +680,21 @@ html {
     float:right;
     border-radius: 5%;
 }
+
 #luchador>ul>li>img:hover {
     transform: scale(1.3);
-
 }
+
 #luchador>ul>li>h2{
     width: 300px;
     margin-left: 400px;
     font-size: 50px;
-
-
 }
-
-
 
 #luchador>ul>li>a{
     margin-left: 400px;
-
-
 }
+
 #luchador>p{
     color:red;
     display: inline-block;
@@ -683,11 +703,7 @@ html {
     margin: -95% 0 0 1000px;
     font-size: 130px;
     transform: rotate(90deg);
-
-
 }
-
-
 
 
 @keyframes deplacement {
@@ -701,9 +717,7 @@ html {
 
     }
     100% {transform: translate(0px);
-
     }
-
 }
 
 /*---------------------------------------------style pages details------------------------------------------------*/
@@ -715,8 +729,6 @@ html {
     font-family: "bangers";
     color: #c9c9c9;
     text-shadow:  20px 7px 0px rgba(180, 58, 58, 0.82);
-
-
 }
 
 #luch-info{
@@ -731,7 +743,6 @@ html {
     position: absolute;
     left:850px;
     top:300px;
-
 }
 
 #details>section>figure{
@@ -748,17 +759,15 @@ html {
 }
 
 #details figcaption{
-
     font-size: 25px;
     text-align: center;
-
-
-
 }
+
 #details figure>img{
     border-radius: 10px;
     margin-top: 10px;
 }
+
 #details figure>img:hover {
     animation-name: shake;
     animation-duration: 0.5s;
@@ -1057,5 +1066,4 @@ html {
     color: #ee3826;
     margin: 0;
     transform: rotate(90deg);
-
 }
